--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ En la década de los 60, un equipo del MIT desarrolló un “casco” de Realida
 <BR>
    <right><IMG SRC="RV3.0.jpeg";WIDTH:"250 PX";HEIGHT:"250 PX">
 <BR>
- <P STYLE="COLOR:BLACK;FONT-SIZE:20 PX;FONT-FAMILY:VERDANA"><DEL>Aprenda más de inteligencia artificial <a href="file:///C:/Users/Mirella%20Yagual/OneDrive/Desktop/tareas%20de%20diseño/FARIAS,%20IA,%20RV,%20RA/FARIAS%20IA.HTML">clik aquí.</a></DEL></P>
+ <P STYLE="COLOR:BLACK;FONT-SIZE:20 PX;FONT-FAMILY:VERDANA"><DEL>Aprenda más de inteligencia artificial <a href="https://username1234-gif.github.io/inteligencia-artificial/">clik aquí.</a></DEL></P>
 <BR>
-<P STYLE="COLOR:BLACK;FONT-SIZE:20 PX;FONT-FAMILY:VERDANA"><DEL>Aprende más sobre realidad aumentada  <a href="file:///C:/Users/Mirella%20Yagual/OneDrive/Desktop/tareas%20de%20diseño/FARIAS,%20IA,%20RV,%20RA/FARIAS%20RA.HTML">click aquí.</a></DEL></P>
+<P STYLE="COLOR:BLACK;FONT-SIZE:20 PX;FONT-FAMILY:VERDANA"><DEL>Aprende más sobre realidad aumentada  <a href="https://username1234-gif.github.io/realidad-aumentada/">click aquí.</a></DEL></P>
 <BR>
  
     VIDEO INASANO<iframe width="560" height="315" src="https://www.youtube.com/embed/8nTz4LPSlOw?si=viHwadxJvXZW_G-T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
